force-app/main/default/objects/ShopifyConfig__c/ShopifyConfig__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>ShopifyConfig</label>
</CustomObject>