force-app/main/default/objects/ShopifyConfig__c/fields/Shared_secret__c.field-meta.xml
<CustomField>
    <fullName>Shared_secret__c</fullName>
    <label>Shared secret</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>