force-app/main/default/objects/ShopifyConfig__c/fields/ShopBaseUrl__c.field-meta.xml
<CustomField>
    <fullName>ShopBaseUrl__c</fullName>
    <label>ShopBaseUrl</label>
    <required>true</required>
    <type>Url</type>
</CustomField>